@@ -1,3 +1,9 @@
+2001-07-17  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/README: Add notes on naming test cases.
+	* testsuite/22_locale/members.cc: Mark as xfail.
+	* testsuite/22_locale/numpunct_char_members.cc: Same.
+
 2001-07-16  Stephen M. Webb  <stephen@bregmasoft.com>
 
 	* acinclude.m4 (GLIBCPP_ENABLE_CHEADERS):  Use glibcpp_srcdir when
